# doubao-auto

./: .env  .env.example  .gitignore  README.md  pyproject.toml
scripts/: bootstrap.sh  install_browser.sh  login.sh  package_release.sh  run_once.sh  start.sh  stop.sh
src/doubao_automation/: __init__.py  browser.py  cli.py  config.py  logging.py  runner.py  service.py  tasks.py  web.py  worker.py
web/: index.html  package-lock.json  package.json
web/src/: App.vue  main.js  styles.css
web/src/api/: client.js
web/src/components/: TaskSidebar.vue  TemplateManager.vue  WorkflowBoard.vue
web/src/composables/: useAutomationConsole.js
web/src/utils/: artifacts.js  formatters.js
